--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         <div class = "info">
 
         <p class="registertext">REGISTRATION</p>
-  <form action="https://renald08.github.io/loginsite/" method="post">
+  <form action="index.html" method="post">
         <div class="Text">
         <label for="username">Username</label>
         </div>
