--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         <div class = "info">
 
         <p class="registertext">REGISTRATION</p>
-  <form action="index.html" method="post">
+  
         <div class="Text">
         <label for="username">Username</label>
         </div>
@@ -45,9 +45,9 @@
             <input type="password" id="password" placeholder="Confirm password" name="password" required>
           </div>
 
-        <button class="createacc" type="submit">Create Account</button>
+        <a href="https://renald08.github.io/loginsite/"><button class="createacc" type="submit">Create Account</button></a>
 
-  </form>
+  
 
         <p class="login">Already have an account? <a href="index.html" >Login now</a></p>
 
