--- a/homepage.html
+++ b/homepage.html
@@ -27,6 +27,8 @@
             <li ><a href=" #">Coffee Shop</a></li>         
             <li ><a href="#">Music</a></li>
             <li ><a href="#">Music Video</a></li>
+		<li><a href="https://renald08.github.io/loginsite/"><i class="fas fa-sign-out"></i>Logout</a> </li>
+
         </ul>
     </nav>
 
